--- a/client/components/Signup/Signup.scss
+++ b/client/components/Signup/Signup.scss
@@ -1,5 +1,5 @@
+@use 'sass:color';
 @use '../../styles/variables' as v;
-
 
 form {
     padding: 2rem;
@@ -8,4 +8,35 @@ form {
 #h2-signup {
     margin-top: 1rem;
     margin: 1rem;
+}
+
+.error-message {
+    color: #020202; 
+    background-color: #fff0f0; /* Fond légèrement rouge */
+    border: 1px solid #ff3860;
+    padding: 1rem;
+    border-radius: 5px;
+    text-align: center;
+    margin : 1rem;
+  }
+
+.success-message {
+    color: #020202; 
+    background-color: #f0fff0; /* Fond légèrement vert */
+    border: 1px solid #00ff00;
+    padding: 1rem;
+    border-radius: 5px;
+    text-align: center;
+    margin : 1rem;
+}
+
+.button {
+    background-color: v.$color-primary;
+    text-align: center;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1rem;
 }
