--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,5 +1,8 @@
 @use 'sass:color';
 
 $color: #e01a1a;
-$color-primary:#9b2e46;
+$color-primary:#b83a36;
+$color-secondary: #fefee2;
+$color-tertiary: #afd192;
+$color-text: #000000;
 $color-bg: #2b5867;
