--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -1,1 +1,11 @@
 @use '../../styles/variables' as v;
+
+.hero-body {
+  background-color: v.$color-primary;
+}
+
+ #title-h1 {
+    margin-top: 5%;
+    margin-bottom: -5%;
+    color: white;
+}
