--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 $color: #e01a1a;
 $color-primary:#b83a36;
-$color-secondary: #fefee2;
+$color-secondary: #eeeed8;
 $color-tertiary: #afd192;
 $color-text: #000000;
 $color-bg: #2b5867;
