--- a/client/components/Header/Header.scss
+++ b/client/components/Header/Header.scss
@@ -11,7 +11,7 @@
 #items{
     color: v.$color-secondary;
     &:hover{
-        color: black;
+        color: v.$color-primary;
         background-color: v.$color-secondary;
     }
 }
@@ -21,7 +21,7 @@
     font-size: 2rem;
     font-weight: bold;
     &:hover{
-        color: black;
+        color: v.$color-primary;
         background-color: v.$color-secondary;
     }
 }
