--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -4,5 +4,5 @@ $color: #e01a1a;
 $color-primary:#b83a36;
 $color-secondary: #eeeed8;
 $color-tertiary: #afd192;
-$color-text: #000000;
+$color-text: black;
 $color-bg: #2b5867;
