--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -1,37 +1,73 @@
 @use 'sass:color';
 @use '../../styles/variables' as v;
 
-.goldenbook {
-    .hero-body {
-      text-align: center;
+#container-global {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#div-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 70vh;
+  background-color: #ecd659;
+  color: v.$color-text;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 1rem;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+
+  h1 {
+    margin: 1.5rem;
+  }
+}
+
+#button-addMessage {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  border: none;
+  margin-top: 2rem;
+  width: 6rem;
+}
+
+#button-addMessage:hover {
+  transform: translateY(-2px);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+#container-card {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100vh;
+  color: v.$color-text;
+  margin: 1rem;
+  border-radius: 1rem;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+
+  .card {
+    background-color: #ecd659;
+    width: 30%;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: translateY(-5px);
     }
-  
-    #container-message {
-      margin-top: 20px;
-  
-      #form-message {
-        margin-bottom: 20px;
-      }
-  
-      #messages {
-        .box {
-          margin-bottom: 10px;
-          padding: 10px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-        }
-  
-        .message-content {
-          font-size: 1.2em;
-          margin-bottom: 5px;
-        }
-  
-        .message-author {
-          font-size: 1em;
-          color: #555;
-          text-align: right;
-        }
-      }
+
+    .message-content {
+      font-size: 1.2em;
+      margin-bottom: 5px;
+    }
+
+    .message-author {
+      font-size: 1em;
+      color: #555;
+      text-align: right;
     }
   }
-  
+}
