--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -9,14 +9,11 @@
 }
 
 #div-title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-width: 70vh;
   background-color: #ecd659;
   color: v.$color-text;
   padding: 1rem;
-  margin: 1rem;
+  margin-top: 5%;
+  margin: 2%;
   border-radius: 1rem;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
 
