--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,8 +1,8 @@
 @use 'sass:color';
 
 $color: #e01a1a;
-$color-primary:#b83a36;
+$color-primary:#91422a;
 $color-secondary: #eeeed8;
-$color-tertiary: #afd192;
+$color-tertiary: #b1d192b9;
 $color-text: black;
 $color-bg: #2b5867;
