--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -2,22 +2,22 @@
 @use '../../styles/variables' as v;
 
 #container-global {
-  min-width: 100%;
+  min-width: 100vw;
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-right: 2%;
-  padding-left: 2%;
+  padding-right: 2vw;
+  padding-left: 2vw;
   background-color: v.$color-secondary;
 }
 
 #div-title {
   background-color: rgba(204, 176, 20, 0.808);
-  min-width: 60%;
+  min-width: 60vw;
   color: v.$color-text;
   padding: 1rem;
-  margin-top: 5%;
-  margin: 2%;
+  margin-top: 5vw;
+  margin: 2vw;
   border-radius: 1rem;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
 
@@ -30,7 +30,7 @@
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border: none;
   margin-top: 2rem;
-  min-width: 10%;
+  min-width: 10vw;
 }
 
 #button:hover {
@@ -41,15 +41,14 @@
 #container-card {
   display: flex;
   flex-wrap: wrap;
-  min-width: 99%;
+  min-width: 99vw;
   color: v.$color-text;
   margin-bottom: 2rem;
   border-radius: 1rem;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
 
   #cards {
-    min-width: 90%;
-    margin: 3%;
+    margin: 3vw;
     border-radius: 1rem;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s;
