--- a/client/components/Header/Header.scss
+++ b/client/components/Header/Header.scss
@@ -5,7 +5,7 @@
 }
 
 .navbar-end{
-    margin-right: 10%;
+    margin-right: 10vw;
 }
 
 #items{
@@ -29,6 +29,6 @@
 
 @media (min-width: 1024px) {
     .navbar-brand{
-        margin-left: 10%;
+        margin-left: 10vw;
     }
 }
