--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -5,7 +5,7 @@
 }
 
  #title-h1 {
-    margin-top: 5%;
-    margin-bottom: -5%;
+    margin-top: 5vw;
+    margin-bottom: -5vw;
     color: v.$color-primary;
 }
