--- a/client/components/Picture/Picture.scss
+++ b/client/components/Picture/Picture.scss
@@ -7,8 +7,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-right: 2%;
-    padding-left: 2%;
+    padding-right: 2vw;
+    padding-left: 2vw;
     background-color: v.$color-secondary ;
 }
 
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2% ;
+    margin-top: 2vw;
     min-width: 40vw ;
     background-color: v.$color-secondary ;
 
@@ -51,7 +51,7 @@
     display: flex;
     justify-content: center;
     max-width: 90vw;
-    margin-top: 2% ;
+    margin-top: 2vw ;
     background-color: v.$color-secondary ;
 
   
