--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -45,10 +45,11 @@
   color: v.$color-text;
   margin-bottom: 2rem;
   border-radius: 1rem;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.2);
 
   #cards {
-    margin: 3vw;
     border-radius: 1rem;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s;
@@ -70,6 +71,62 @@
     }
   }
   #one-card {
-   background-color: v.$color-secondary;
+    background-color: v.$color-secondary;
+  }
+}
+
+#message{
+  margin-left: 3vw;
+}
+
+@media (max-width: 400px) {
+  #container-global {
+    padding-right: 1vw;
+    padding-left: 1vw;
+  }
+
+  #div-title {
+    min-width: 90vw;
+    padding: 0.5rem;
+    margin-top: 3vw;
+    margin: 1vw;
+    
+    h1 {
+      margin: 1rem;
+      font-size: 1.5rem;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+    }
+  }
+
+  #container-card {
+    min-width: 98vw;
+    margin-right: 0.2rem;
+    margin-left: 0.2rem;
+    
+    #cards {
+      min-width: 90vw;
+      margin: 0.5rem 0;
+    }
+
+    .message-content {
+      font-size: 1em;
+    }
+
+    .message-author {
+      font-size: 0.9em;
+    }
+  }
+
+  #button {
+    min-width: 30vw;
+    font-size: 0.8rem;
+  }
+
+  #message {
+    margin-left: 1vw;
+    font-size: 1.2rem;
   }
 }
