--- a/client/components/Picture/Picture.scss
+++ b/client/components/Picture/Picture.scss
@@ -33,8 +33,14 @@
         max-width: 55vw;
         margin-top: 1rem;
         margin-bottom: 1rem;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         color: v.$color-primary ;
+
+        em{
+            font-size: 1rem;
+            color: black ;
+        
+        }
     }
 }
 
