--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,5 +1,9 @@
 @use 'sass:color';
 
+
+$font-family: 'Roboto', sans-serif;
+$font-size: 16px;
+
 $color: #e01a1a;
 $color-primary:#91422a;
 $color-secondary: #eeeed8;
