--- a/client/components/Place/Place.scss
+++ b/client/components/Place/Place.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    h1{
+        color: v.$color-primary;
+    }
 }
 
 #box{
