--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -9,3 +9,15 @@
     margin-bottom: -5vw;
     color: v.$color-primary;
 }
+
+#first-paragraphe{
+    width: 100%;
+}
+
+li {
+  text-align: justify;
+}
+
+#first-paragraphe {
+
+}
