--- a/client/components/Picture/Picture.scss
+++ b/client/components/Picture/Picture.scss
@@ -74,3 +74,14 @@
 #picture-name {
     height: 0.1%;
 }
+
+#choose-box{
+    background-color: v.$color-tertiary;
+
+    #chooseFile{
+        margin-bottom: 1rem;
+    }
+    #choosenFile{
+        color: black;
+    }
+}
