--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -6,7 +6,7 @@
 
  #title-h1 {
     margin-top: 5vw;
-    margin-bottom: -5vw;
+    margin-bottom: -1rem;
     color: v.$color-primary;
 }
 
@@ -21,3 +21,19 @@ li {
 #first-paragraphe {
 
 }
+
+#img-main{
+  filter: contrast(1.2) brightness(1.2) drop-shadow(0px 0px 10px rgba(0, 0, 0, 1.5));
+  animation: moveUpDown 2s ease-in-out infinite alternate;
+
+}
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(20px);
+  }
+}
+
