--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -78,5 +78,12 @@
 }
 
 #paragraph {
+  color: v.$color-text;
  background-color: v.$color-secondary;
+}
+
+#box-date{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
