--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -18,9 +18,6 @@ li {
   text-align: justify;
 }
 
-#first-paragraphe {
-
-}
 
 #img-main{
   filter: contrast(1.2) brightness(1.2) drop-shadow(0px 0px 10px rgba(0, 0, 0, 1.5));
@@ -33,7 +30,7 @@ li {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(20px);
+    transform: translateY(4rem);
   }
 }
 
