--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -1,36 +1,40 @@
 @use '../../styles/variables' as v;
 
-.hero-body {
-  background-color: v.$color-secondary;
-}
-
- #title-h1 {
-    margin-top: 5vw;
-    margin-bottom: -1rem;
-    color: v.$color-primary;
-}
-
-#first-paragraphe{
-    width: 100%;
-}
-
-li {
-  text-align: justify;
-}
-
-
-#img-main{
-  filter: contrast(1.2) brightness(1.2) drop-shadow(0px 0px 10px rgba(0, 0, 0, 1.5));
-  animation: moveUpDown 2s ease-in-out infinite alternate;
-
-}
-
-@keyframes moveUpDown {
-  0% {
-    transform: translateY(0);
+.Home{
+  .hero-body {
+    background-color: v.$color-secondary;
   }
-  100% {
-    transform: translateY(4rem);
+  
+   #title-h1 {
+      margin-top: 0.5vw;
+      margin-bottom: -1rem;
+      color: v.$color-primary;
   }
-}
+  
+  #first-paragraphe{
+      width: 100%;
+  }
+  
+  li {
+    text-align: justify;
+  }
+  
+  
+  #img-main{
+    filter: contrast(1.2) brightness(1.2) drop-shadow(0px 0px 10px rgba(0, 0, 0, 1.5));
+    animation: moveUpDown 2s ease-in-out infinite alternate;
+  
+  }
+  
+  @keyframes moveUpDown {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(2rem);
+    }
+  }
+  
+  
 
+}
