--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -1,89 +1,96 @@
 @use 'sass:color';
 @use '../../styles/variables' as v;
 
-
-#container-global {
-  min-width: 100vw;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-right: 2vw;
-  padding-left: 2vw;
-  background-color: v.$color-secondary;
-}
-
-#div-title {
-  background-color: rgba(204, 176, 20, 0.808);
-  min-width: 60vw;
-  color: v.$color-text;
-  padding: 1rem;
-  margin-top: 5vw;
-  margin: 2vw;
-  border-radius: 1rem;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
-
-  h1 {
-    margin: 1.5rem;
+.goldenbook{
+  #container-global {
+    min-width: 100vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-right: 2vw;
+    padding-left: 2vw;
+    background-color: v.$color-secondary;
   }
-}
-
-#button {
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  border: none;
-  margin-top: 2rem;
-  min-width: 10vw;
-}
-
-#button:hover {
-  transform: translateY(-2px);
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-#container-card {
-  display: flex;
-  flex-wrap: wrap;
-  width: 80vw;
-  color: v.$color-text;
-  margin-bottom: 2rem;
-  border-radius: 1rem;
-  margin-right: 0.5rem;
-  margin-left: 0.5rem;
-  box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.2);
-  background-color: v.$color-secondary;
   
-  #one-card {
-   background-color: rgba(204, 176, 20, 0.808);
+  #div-title {
+    background-color: rgba(204, 176, 20, 0.808);
+    min-width: 60vw;
+    color: v.$color-text;
+    padding: 1rem;
+    margin-top: 5vw;
+    margin: 2vw;
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  
+    h1 {
+      margin: 1.5rem;
+    }
   }
-}
-
-#message{
-  margin-left: 5%;
-}
-
-.message-content{
-  color: v.$color-text;
-}
-.message-author{
-  color: v.$color-primary;
-}
-
-.container-field{
-
-  display: flex;
-  justify-content: center;
-  .field{
-    width: 50vw;
+  
+  #button {
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    border: none;
+    margin-top: 2rem;
+    min-width: 10vw;
+  }
+  
+  #button:hover {
+    transform: translateY(-2px);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  }
+  
+  #container-card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80vw;
+    color: v.$color-text;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.2);
+    background-color: v.$color-secondary;
+    
+    #one-card {
+     background-color: rgba(204, 176, 20, 0.808);
+    }
+  }
+  
+  #message{
+    margin-left: 5%;
+  }
+  
+  .message-content{
+    color: v.$color-text;
+  }
+  .message-author{
+    color: v.$color-primary;
+  }
+  
+  .container-field{
+  
+    display: flex;
+    justify-content: center;
+    .field{
+      width: 50vw;
+    }
+  
+  }
+  
+  #paragraph {
+    color: v.$color-text;
+   background-color: v.$color-secondary;
+  }
+  
+  #box-date{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .span-letter{
+    font-size: 2rem;
   }
 
 }
 
-#paragraph {
-  color: v.$color-text;
- background-color: v.$color-secondary;
-}
-
-#box-date{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
