--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-top: 2rem;
     padding-right: 2vw;
     padding-left: 2vw;
     background-color: v.$color-secondary;
