--- a/client/components/Header/Header.scss
+++ b/client/components/Header/Header.scss
@@ -10,6 +10,7 @@
 
 #items{
     color: v.$color-secondary;
+
     &:hover{
         color: v.$color-primary;
         background-color: v.$color-secondary;
@@ -27,13 +28,20 @@
 }
 
 .navbar-menu.is-active {
-    background-color: black;
+    background-color: v.$color-primary;
+    .navbar-end{
+        margin-right: 10vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
-@media (min-width: 1024px) {
+@media  (min-width: 1024px) {
     .navbar-brand{
         margin-left: 10vw;
     }
+   
 }
 
 .white-line{
