--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -2,6 +2,22 @@
 @use '../../styles/variables' as v;
 
 .goldenbook{
+  /* Guestbook.scss */
+  .fireworks-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1000;
+    transition: opacity 1.5s ease-out;
+  }
+  
+  .fireworks-container.fade-out {
+    opacity: 0;
+  }
+
   #container-global {
     min-width: 100vw;
     display: flex;
