--- a/client/components/Login/Login.scss
+++ b/client/components/Login/Login.scss
@@ -1,8 +1,31 @@
 @use 'sass:color';
 @use '../../styles/variables' as v;
 
-h2 #ici {
-    &:hover {
-        color: v.$color-primary;
+
+#container-login{
+    margin-top: 3rem;
+    width: 50%;
+    h2 #ici {
+        
+        text-decoration: underline;
+        &:hover {
+            color: v.$color-primary;
+        }
+    }
+
+    #connexion {
+        display: flex;
+        justify-content: center;
+        #button-login{
+            margin-top: 1rem;
+            background-color: v.$color-primary;
+            color: v.$color-secondary;
+    
+            &:hover {
+                background-color: v.$color-secondary;
+                color: v.$color-primary;
+            }
+        }
+        
     }
 }
