--- a/client/components/Pending/Pending.scss
+++ b/client/components/Pending/Pending.scss
@@ -2,7 +2,7 @@
 @use '../../styles/variables' as v;
 
 #container-page{
-    height: auto;
+    height: 100%;
     width: auto;
     display: flex;
     justify-content: center;
@@ -10,7 +10,7 @@
     background-color: v.$color-secondary;
 
     #title-h1{
-        margin-top: 2rem;
+        margin-top: 3rem;
         margin-bottom: 1rem;
         color: v.$color-text;
      }
