--- a/client/components/Login/Login.scss
+++ b/client/components/Login/Login.scss
@@ -13,6 +13,11 @@
             color: v.$color-primary;
         }
     }
+    .input{
+        background-color: white;
+        color: black;
+      }
+
 
     #connexion {
         display: flex;
