--- a/client/components/Signup/Signup.scss
+++ b/client/components/Signup/Signup.scss
@@ -8,6 +8,10 @@
     align-items: center;
 
 
+    .input{
+        background-color: white;
+        color: black;
+      }
 
     form {
         padding: 2rem;
