--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -44,7 +44,12 @@
       margin: 1.5rem;
     }
   }
-  
+  .input, .textarea{
+    background-color: white;
+    color: black;
+  }
+
+
   #button {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     border: none;
