--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -44,10 +44,16 @@
       margin: 1.5rem;
     }
   }
-  .input, .textarea{
+  .input, .textarea {
     background-color: white;
     color: black;
-  }
+
+    &::placeholder {
+        color: gray; // Changez cette couleur selon vos besoins
+    }
+}
+
+
 
 
   #button {
