--- a/client/components/Guestbook/Guestbook.scss
+++ b/client/components/Guestbook/Guestbook.scss
@@ -49,7 +49,7 @@
     color: black;
 
     &::placeholder {
-        color: gray; // Changez cette couleur selon vos besoins
+        color: gray;
     }
 }
 
