--- a/client/components/Header/Header.scss
+++ b/client/components/Header/Header.scss
@@ -1,49 +1,75 @@
 @use '../../styles/variables' as v;
 
-#nav{
+#nav {
     background-color: v.$color-primary;
 }
 
-.navbar-end{
+.navbar-end {
     margin-right: 10vw;
+
+    @media (max-width: 768px) {
+        margin-right: 0;
+    }
 }
 
-#items{
+#items {
     color: v.$color-secondary;
 
-    &:hover{
+    &:hover {
         color: v.$color-primary;
         background-color: v.$color-secondary;
     }
 }
 
-#items-title{
+#items-title {
     color: v.$color-secondary;
     font-size: 2rem;
     font-weight: bold;
-    &:hover{
+    &:hover {
         color: v.$color-primary;
         background-color: v.$color-secondary;
     }
 }
 
 .navbar-menu.is-active {
+    display: flex;
+    flex-direction: column;
+    max-width: 60vw;
+    margin-left: auto; // Align the menu to the right
+    position: absolute;
+    right: 0; // Ensure the menu is on the right side
     background-color: v.$color-primary;
-    .navbar-end{
-        margin-right: 10vw;
+    z-index: 1000;
+
+    .navbar-burger{
+        color: v.$color-secondary;
+    }
+    #navbar-items {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    @media (max-width: 768px) {
+        width: 100vw;
+        margin-left: 0;
+        border-radius: 0 0 0 5%;
     }
 }
 
-@media  (min-width: 1024px) {
-    .navbar-brand{
+@media (min-width: 1024px) {
+    .navbar-brand {
         margin-left: 10vw;
     }
-   
 }
 
-.white-line{
-   color: v.$color-secondary;
+@media (max-width: 768px) {
+    .navbar-burger {
+        margin-right: 10px;
+    }
+}
+
+.white-line {
+    color: v.$color-secondary;
 }
