--- a/client/components/MentionsLegales/MentionsLegales.scss
+++ b/client/components/MentionsLegales/MentionsLegales.scss
@@ -1,38 +1,34 @@
 @use '../../styles/variables' as v;
 @use 'sass:color';
 
-.mentions-legales{
-
-    #container-global-mentions{
+.mentions-legales {
     background-color: v.$color-secondary;
-    color: v.$color-text;
-    height: 100vh;
-    min-width: 60% ;
-    display: block;
-    flex-direction: column;
 
-
-    p{
-        text-align: left;
-        margin-bottom: 1rem;
-        margin-left: 1rem;
-    }
-
-    h1{
-        text-align: center;
-        padding-top: 2rem;
-        font-size: 100rem;
-    }
-    
-    h1,h2 {
+    #container-global-mentions {
+        background-color: v.$color-secondary;
         color: v.$color-text;
-        font-size: large;
-        text-decoration: underline;
-        margin-bottom: 1rem;
-        margin-left: 1rem;
-       font-weight: bold;
+        min-width: 60%;
+        padding: 2rem 1rem; // Ajout de padding pour l'espacement
+        display: flex;
+        flex-direction: column;
 
+        p {
+            text-align: left;
+            margin-bottom: 1rem;
+        }
 
+        h1 {
+            text-align: center;
+            font-size: 2rem; // Réduction de la taille de la police pour les petits écrans
+            margin-bottom: 2rem;
+        }
+
+        h1, h2 {
+            color: v.$color-text;
+            text-decoration: underline;
+            margin-bottom: 1rem;
+            font-weight: bold;
+        }
 
         a {
             color: v.$color-text;
@@ -43,5 +39,19 @@
             }
         }
     }
-}
+
+    @media (max-width: 768px) {
+        #container-global-mentions {
+            min-width: 100%; // Utilisation de la largeur complète de l'écran sur les petits écrans
+            padding: 1rem; // Réduction du padding pour les petits écrans
+
+            h1 {
+                font-size: 1.5rem; // Réduction de la taille de la police pour les petits écrans
+            }
+
+            h2 {
+                font-size: 1.25rem; // Réduction de la taille de la police pour les petits écrans
+            }
+        }
+    }
 }
