--- a/client/components/ConditionCookie/ConditionCookie.scss
+++ b/client/components/ConditionCookie/ConditionCookie.scss
@@ -1,44 +1,66 @@
 @use 'sass:color';
 @use '../../styles/variables' as v;
 
-.conditions-cookies{
+.conditions-cookies {
+  font-family: 'Times New Roman', Times, serif;
+  background-color: v.$color-secondary;
 
   #container-global-cookie {
     padding: 20px;
     background-color: v.$color-secondary;
     color: black;
-    height: 100vh;
-    min-width: 60% ;
-  
-    h1, h2{
+    min-width: 60%;
+    display: flex;
+    flex-direction: column;
+
+    h1, h2 {
       color: black;
-      font-size: large;
       text-decoration: underline;
       margin-bottom: 1rem;
+    }
 
-  
     a {
       color: black;
       text-decoration: none;
-  
+
       &:hover {
         text-decoration: underline;
       }
     }
-  
+
     ul {
       list-style-type: disc;
       padding-left: 1rem;
     }
-  
+
     p {
       margin-bottom: 20px;
       line-height: 1.6;
       margin-bottom: 1rem;
-
     }
-
   }
-}
-  
+
+  @media (max-width: 768px) {
+    #container-global-cookie {
+      min-width: 100%;
+      padding: 1rem;
+
+      h1 {
+        font-size: 1.5rem; // Réduction de la taille de la police pour les petits écrans
+      }
+
+      h2 {
+        font-size: 1.25rem; // Réduction de la taille de la police pour les petits écrans
+      }
+
+      p {
+        margin-bottom: 1rem;
+        line-height: 1.4; // Ajustement de l'interligne pour les petits écrans
+      }
+
+      ul {
+        padding-left: 1rem;
+      }
+    }
+  }
 }
