--- a/client/components/MentionsLegales/MentionsLegales.scss
+++ b/client/components/MentionsLegales/MentionsLegales.scss
@@ -2,8 +2,8 @@
 @use 'sass:color';
 
 .mentions-legales {
+    font-family: 'Times New Roman', Times, serif;
     background-color: v.$color-secondary;
-
     #container-global-mentions {
         background-color: v.$color-secondary;
         color: v.$color-text;
