--- a/client/components/Signup/Signup.scss
+++ b/client/components/Signup/Signup.scss
@@ -1,17 +1,15 @@
 @use 'sass:color';
 @use '../../styles/variables' as v;
 
-
-.container-signup{
-    display: flex ;
+.container-signup {
+    display: flex;
     justify-content: center;
     align-items: center;
-
 
     .input, .textarea {
         background-color: white;
         color: black;
-    
+
         &::placeholder {
             color: gray;
         }
@@ -21,32 +19,63 @@
         padding: 2rem;
         width: auto;
     }
-    
+
     #h2-signup {
         margin-top: 3rem;
+    }
 
+    /* Styles for the modal background */
+    .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9998; /* Slightly lower than the modal content */
     }
-    
-    .error-message {
-        color: #020202; 
-        background-color: #fff0f0; /* Fond légèrement rouge */
+
+    /* Styles for the modal content */
+    .modal-content {
+        background: white;
+        padding: 1rem;
+        border-radius: 5px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 90%; /* Responsive width */
+        position: relative; /* For positioning the close button */
+        z-index: 9999; /* High z-index to appear above other content */
+    }
+
+    /* Close button */
+    .close-button {
+        position: absolute;
+        top: -1.6rem;
+        right: 0.1rem;
+        background: transparent;
+        border: none;
+        color: #ff3860;
+        font-size: 3rem;
+        cursor: pointer;
+    }
+
+    /* Specific styles for success and error messages */
+    .modal-content.error-message {
+        color: #020202;
+        background-color: #fff0f0; /* Slightly red background */
         border: 1px solid #ff3860;
-        padding: 1rem;
-        border-radius: 5px;
-        text-align: center;
-        margin : 1rem;
-      }
-    
-    .success-message {
-        color: #020202; 
-        background-color: #f0fff0; /* Fond légèrement vert */
-        border: 1px solid #00ff00;
-        padding: 1rem;
-        border-radius: 5px;
-        text-align: center;
-        margin : 1rem;
     }
-    
+
+    .modal-content.success-message {
+        color: #020202;
+        background-color: #f0fff0; /* Slightly green background */
+        border: 1px solid #00ff00;
+    }
+
     form .button {
         background-color: v.$color-primary;
         text-align: center;
@@ -57,23 +86,22 @@
         cursor: pointer;
         margin-top: 1rem;
         margin-left: 30%;
-    
+
         &:hover {
             background-color: v.$color-secondary;
             color: black;
         }
     }
-    
+
     #connexion {
         color: v.$color-tertiary;
-    
+
         &:hover {
             color: v.$color-primary;
         }
     }
-    
-    #em{
+
+    #em {
         font-size: 0.7rem;
     }
-    
 }
