--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -19,7 +19,11 @@
     text-align: justify;
   }
   
-  
+  h2{
+    color: rgba(0, 0, 0, 0.829);
+    font-weight: bold;
+  } 
+
   #img-main{
     filter: contrast(1.2) brightness(1.2) drop-shadow(0px 0px 10px rgba(0, 0, 0, 1.5));
     animation: moveUpDown 3s ease-in-out infinite alternate;
@@ -35,6 +39,13 @@
     }
   }
   
-  
+  h3{
+    color: v.$color-primary;
+    font-weight: bold;
+
+  }
+  #news-box{
+   display: inline-block;
+  }
 
 }
