--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -3,8 +3,19 @@
 .Home{
   .hero-body {
     background-color: v.$color-secondary;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  
+   #compte-a-rebour{
+    margin-top: 4rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+   
    #title-h1 {
       margin-top: 0.5vw;
       margin-bottom: -1rem;
@@ -44,8 +55,28 @@
     font-weight: bold;
 
   }
+
+  #news{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+  }
+  
+  #news-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+  }
+ 
   #news-box{
    display: inline-block;
+   align-items: center;
   }
-
+  #news-h2{
+    font-size: 2rem;
+    text-decoration: underline;
+    margin-bottom: 2rem;
+  }
 }
