--- a/client/components/Home/Home.scss
+++ b/client/components/Home/Home.scss
@@ -8,6 +8,9 @@
     justify-content: center;
     align-items: center;
   }
+   #compte-h2{
+    margin-bottom: 1rem;
+   }
    #compte-a-rebour{
     margin-top: 4rem;
     display: inline-flex;
@@ -16,7 +19,7 @@
     align-items: center;
    }
    
-   #title-h1 {
+   h1 {
       margin-top: 0.5vw;
       margin-bottom: -1rem;
       color: v.$color-primary;
@@ -29,9 +32,9 @@
   li {
     text-align: justify;
   }
-  
+ 
+
   h2{
-    color: rgba(0, 0, 0, 0.829);
     font-weight: bold;
   } 
 
@@ -78,5 +81,6 @@
     font-size: 2rem;
     text-decoration: underline;
     margin-bottom: 2rem;
+    color: black;
   }
 }
